--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@ body {
     font-family: sans-serif;
     margin: 0;
     padding: 0;
-    padding-bottom: 80px;
+    background-color: #F9F7F3;
 
 }
 
@@ -214,3 +214,44 @@ h5 {
         min-height: 100%;
     };
 }
+
+/*Aca empiezan los estilos de la pag "sobre mi"*/
+
+h1 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 50px;
+ 
+}
+
+.flex-container {
+    display: flex;
+    background-color: red;
+    border: 4px solid yellow;
+    justify-content: center;
+    align-items: center;
+    margin: 15px;
+    width: 1000px;
+}
+
+.item-sobre-mi-1 img{
+    height: 300px;
+    width: 300px;
+}
+
+.item-sobre-mi-1 {
+   padding-left: 280px;
+}
+
+.sobre-mi-parrafo {
+    font-size: 16px;
+    color: #244B54;
+    display: flex;
+    background-color: blue;
+    width: 70%;
+    margin-left: 60px;
+
+}
+
+
