--- a/css/style.css
+++ b/css/style.css
@@ -217,7 +217,7 @@ h5 {
 
 /*Aca empiezan los estilos de la pag "sobre mi"*/
 
-h1 {
+h6 {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -227,8 +227,6 @@ h1 {
 
 .flex-container {
     display: flex;
-    background-color: red;
-    border: 4px solid yellow;
     justify-content: center;
     align-items: center;
     margin: 15px;
@@ -248,10 +246,9 @@ h1 {
     font-size: 16px;
     color: #244B54;
     display: flex;
-    background-color: blue;
     width: 70%;
     margin-left: 60px;
 
 }
 
-
+/*Aca empiezan los estilos de la pag "galeria"*/
