--- a/css/style.css
+++ b/css/style.css
@@ -252,3 +252,29 @@ h6 {
 }
 
 /*Aca empiezan los estilos de la pag "galeria"*/
+
+.galeria {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 50px;
+    font-size: large;
+}
+
+.grid-container-fotos {
+    width: 90%;
+    max-width: 1100px;
+    margin: 40px auto;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(280px,1fr));
+    grid-auto-rows: 330px;
+    gap: 30px;
+
+}
+
+section .foto-galeria {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    border-radius: 5px;
+}
